Lights Off 48.alpha
==================

* Updated translations
* Migrated to GTK4 (Arnaud B.)

Lights Off 46.0
==================

* Updated translations

Lights Off 46.rc
==================

* Updated translations
* Appdata fixes (Sabri Ünal)
* Exclude source SVG icons (Robert Roth)
* Help fix describing menu button location (Rafael Fontenelle)

Lights Off 46.alpha
==================

* Updated translations
* Updated incorrect links in help (Andre Klapper)
* Remove GNOME branding !19 (Sabri Ünal)

Lights Off 40.0.1
==================
* Updated appdata with 40.0 stable info

Lights Off 40.0
==================

* Updated translations
* Use unowned for GtkChild fields (Rico Tzschichholz)

Lights Off 40.rc
==================

* Updated translations

Lights Off 40.beta
==================

* Updated translations
* Rework UI to work better on smaller screens (Arnaud Bonatti)

Lights Off 40.alpha
==================

* Updated translations
* Code cleanup and modernization (Arnaud Bonatti)

Lights Off 3.38.0
==================

* Updated translations

Lights Off 3.37.90
==================

* Updated translations
* Updated help
* Updated build
* Switch to GTK mode by default (Robert Roth)

Lights Off 3.36.0
==================

* Updated translations
* Updated help

Lights Off 3.35.90
==================

* Updated translations
* Updated help

Lights Off 3.34.0
==================

* Updated translations

Lights Off 3.33.92
==================

* Updated translations

Lights Off 3.32.0
==================

* Updated translations

Lights Off 3.31.92
==================

* Updated translations

Lights Off 3.31.91
==================

* Snap build fixes (Jeremy Bicha)
* Updated translations

Lights Off 3.31.90
==================

* Snap build fixes (Jeremy Bicha)
* Unify application identifier !5 (Bilal Elmoussaoui)
* Added tests to validate appdata and desktop !5 (Bilal Elmoussaoui)
* Updated appdata !5 (Bilal Elmoussaoui)
* Added flatpak nightly builds !6 (Bilal Elmoussaoui)