@@ -53,6 +53,14 @@
   <!-- Generated by  http://apps-xdgapp.rhcloud.com/oars -->
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="48~rc" date="2025-03-01" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>UI Improvements (Robert Roth)</li>
+        </ul>
+      </description>
+    </release>
     <release version="48~alpha" date="2025-01-10" type="development">
       <description>
         <ul>
