@@ -1,3 +1,9 @@
+Lights Off 48.rc
+==================
+
+* Updated translations
+* UI improvements (Robert Roth)
+
 Lights Off 48.alpha
 ==================
 
